adding external navigation

--- a/1.html
+++ b/1.html
@@ -6,10 +6,34 @@
 		<title>test1</title>
 
 		<link rel="stylesheet" type="text/css" href="css/1.css">
+
+		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow|PT+Sans:400,700,400italic,700italic|PT+Mono|PT+Serif+Caption:400,400italic' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
 		<div class="container">
+			<div class="navigation">
+				<div class="intro">
+					<div class="outer">
+						<h1 class="inner1">Intro</h1>
+					</div>
+					
+				</div>
+	
+				<div class="title">
+					<h1><span class="italic">If I Ruled the World</span> presented by PRESS PRESS</h1>
+				</div>
+	
+				<div class="afterwards">
+					<div class="outer">
+						<h1 class="inner2">Afterwards</h1>
+					</div>
+				</div>
+			</div>
+
+			<div class="table">
+				
+			</div>
 
 
 		</div>
