finishing up draft of ver1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 		<div class="container">
 			<ul>
 				<li>
-					<a href="1.html">1. </a>
+					<a href="1.html">ver 1.01</a> Originally discussed idea, set in red, white, and black. Certain issues may come up in attempting to make this itteration mobile, more later.
+				</li>
+				<br>
+				<li>
+					<a href="2.html">ver 1.02</a> Same as above, using gradient swatch for coloring instead.
 				</li>
 			</ul>
 		</div>
