--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				</li>
 				<br>
 				<li>
-					<a href="1.02.html">ver 1.02</a> Same as above, using gradient swatch for coloring instead.
+					<a href="1.02.html">ver 1.02</a> Same as above, using gradient swatch for coloring instead. Also added tabs to close intro and afterwards sections.
 				</li>
 			</ul>
 		</div>
