--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 				<li>
 					<a href="1.02.html">ver 1.02</a> Same as above, using gradient swatch for coloring instead. Also added tabs to close intro and afterwards sections.
 				</li>
+
+				<!-- <li>
+					<a href="2.01.html">ver 2.01</a> Building off of the above webpage. New hover states, type treatment, and one approach to making the site mobile responsive.
+				</li> -->
 			</ul>
 		</div>
 		
