--- a/2.01.html
+++ b/2.01.html
@@ -14,6 +14,8 @@
 		<div class="container">
 			<div class="navigation">
 				<div class="intro" id="fade">
+					<a class="external-link" href="intro.html"></a>
+
 					<div class="outer">
 						<h1 class="inner1">Intro</h1>
 					</div>
