adding links to intro and afterwards

--- a/2.01.html
+++ b/2.01.html
@@ -14,7 +14,7 @@
 		<div class="container">
 			<div class="navigation">
 				<div class="intro" id="fade">
-					<a class="external-link" href="intro.html"></a>
+					<a class="external-link1" href="intro.html"></a>
 
 					<div class="outer">
 						<h1 class="inner1">Intro</h1>
@@ -44,6 +44,9 @@
 				</div>
 	
 				<div class="afterwards" id="fade">
+					
+					<a class="external-link2" href="afterwards.html"></a>
+
 					<div class="outer">
 						<h1 class="inner2">Afterwards</h1>
 					</div>
@@ -158,6 +161,7 @@
 					<h3 id="click2">
 						click to close
 					</h3>
+
 				</div>
 			</div>
 
