--- a/2.01.html
+++ b/2.01.html
@@ -4,7 +4,8 @@
 
 	<head>
 		<title>test2.01</title>
-
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/2.01.css">
 
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow|PT+Sans:400,700,400italic,700italic|PT+Mono|PT+Serif+Caption:400,400italic' rel='stylesheet' type='text/css'>
