adding safety net

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
 			<ul>
 				<li>
-					<a href="1.html">ver 1.01</a> Originally discussed idea, set in red, white, and black. Certain issues may come up in attempting to make this itteration mobile, more later.
+					<a href="promo.01.html">Promo 1.01</a> Super simple, just in case we want to keep the print / digi branding the same. 
+				</li>
+				<br>
+				<li>
+					<a href="2.01.html">ver 2.01</a> Building off of the above webpage. New hover states, type treatment, and one approach to making the site mobile responsive.
 				</li>
 				<br>
 				<li>
@@ -22,8 +26,9 @@
 				</li>
 				<br>
 				<li>
-					<a href="2.01.html">ver 2.01</a> Building off of the above webpage. New hover states, type treatment, and one approach to making the site mobile responsive.
+					<a href="1.html">ver 1.01</a> Originally discussed idea, set in red, white, and black. Certain issues may come up in attempting to make this itteration mobile, more later.
 				</li>
+				<br>	
 			</ul>
 		</div>
 		
