--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 			<ul>
 				<li>
-					<a href="promo.01.html">Promo 1.01</a> Super simple, just in case we want to keep the print / digi branding the same. 
+					<a href="promo1.01.html">Promo 1.01</a> Super simple, just in case we want to keep the print / digi branding the same. 	
 				</li>
 				<br>
 				<li>
