adding blinking text

--- a/promo1.01.html
+++ b/promo1.01.html
@@ -4,12 +4,16 @@
 
 	<head>
 		<title>promo 1.01</title>
-
+		
+		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow|PT+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/promo1.01.css">
 	</head>
 
 	<body>
 		<div class="container">
+			<h1>
+				CHECK SOON FOR MORE INFO
+			</h1>
 			<img src="img/promo1.01/1.png">
 		</div>
 		
