--- a/promo1.01.html
+++ b/promo1.01.html
@@ -4,6 +4,8 @@
 
 	<head>
 		<title>promo 1.01</title>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow|PT+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/promo1.01.css">
