big push to 3.01

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 			<ul>
 				<li>
+					<a href="3.01.html">ver 3.01</a> Changes discussed from ver 2.01 applied, every project links to a (responsive) sample project project page. 	
+				</li>
+				<br>
+				<li>
 					<a href="promo1.01.html">Promo 1.01</a> Super simple, just in case we want to keep the print / digi branding the same. 	
 				</li>
 				<br>
