--- a/3.01.html
+++ b/3.01.html
@@ -85,7 +85,7 @@
 								<span class="ch-title">
 									You Come From The Stars , Black People :
 								</span> 
-								<span class="main-text">
+								<span class="info-text">
 									Through months of conversation surrounding Nas’s It Was Written,
 								</span> 
 								<span class="author-name">
@@ -94,7 +94,7 @@
 								<span class="author-name">
 									Khadija Nia Adell
 								</span> 
-								<span class="main-text">
+								<span class="info-text">
 									address inequity, visions of contemporary rulership and the potential of taking ownership over the present.
 								</span> 
 							</p>
@@ -106,12 +106,12 @@
 								<span class="ch-title">
 									Cooperation is a Fact of Life :
 								</span> 
-								<span class="main-text">In this conversation, artist, scholar and activist, 
+								<span class="info-text">In this conversation, artist, scholar and activist, 
 								</span>
 								<span class="author-name">
 									Person Ablach
 								</span>
-								<span class="main-text">
+								<span class="info-text">
 									, discusses the absurdity of freedom as it relates to artistic practice and capitalism. These ideas lead us to discussing Person’s vision of more structured ways of being in the world which require working with others in your community as a standard practice.
 								</span>
 
@@ -124,7 +124,7 @@
 								<span class="ch-title">
 									Lavender Blue Skies :
 								</span> 
-								<span class="main-text">Through an active, collaborative investigation of holistic health, </span>
+								<span class="info-text">Through an active, collaborative investigation of holistic health, </span>
 								<span class="author-name">
 									Amy Reid 
 								</span> 
@@ -132,7 +132,7 @@
 								<span class="author-name">
 									Brayaria Simms (AKA Greydolf)
 								</span>
-								<span class="main-text">, embarked on a series of activities together including meditation, swimming, walking, communal meals, collaborative work on creative projects and conversation. These practices resulted in a mutually supportive relationship of one another and the production of a manifesto which extends the authors’ learnings in order to help you become the best version of you!</span>
+								<span class="info-text">, embarked on a series of activities together including meditation, swimming, walking, communal meals, collaborative work on creative projects and conversation. These practices resulted in a mutually supportive relationship of one another and the production of a manifesto which extends the authors’ learnings in order to help you become the best version of you!</span>
 							</p>
 						</li>
 						<li class="ch4">
@@ -142,11 +142,11 @@
 								<span class="ch-title">
 									Learning Yourself to Yourself :
 								</span> 
-								<span class="main-text">In this conversation, Baltimore’s radical, improvisational queen, </span>
+								<span class="info-text">In this conversation, Baltimore’s radical, improvisational queen, </span>
 								<span class="author-name">
 									Bonnie Jones
 								</span>
-								<span class="main-text">, applauds the extraordinary resilience of Baltimore while inviting us into her process of ‘learning how to be free’ through improvisational music, a medium that inherently breaks down traditional power structures. </span>
+								<span class="info-text">, applauds the extraordinary resilience of Baltimore while inviting us into her process of ‘learning how to be free’ through improvisational music, a medium that inherently breaks down traditional power structures. </span>
 							</p>
 						</li>
 						<li class="tr ch5">
@@ -156,13 +156,13 @@
 								<span class="ch-title">
 									Life Experiences: What Happens In Our World? :
 								</span> 
-								<span class="main-text">
+								<span class="info-text">
 									After a three-month intensive writing workshop centering on the theme If I Ruled The World, a group of 
 								</span>
 								<span class="author-name">
 									young writers and artists from Baltimore City Community College Refugee Youth Project
 								</span>
-								<span class="main-text">, in partnership with the Press Press team, created a series of manifestos addressing their human rights and wrote powerful poetry about the hardships of exile and their hopes for their native home of Burma.</span>
+								<span class="info-text">, in partnership with the Press Press team, created a series of manifestos addressing their human rights and wrote powerful poetry about the hardships of exile and their hopes for their native home of Burma.</span>
 							</p>
 						</li>
 
@@ -176,35 +176,91 @@
 							<h2></h2>
 
 							<p> 
-								<span class="ch-title">Number One Is Empathy :</span> In this conversation with <span class="author-name">Kursten Pickup</span>, Baltimore City Community College Refugee Youth Project Coordinator, Kursten addresses the power of empathy in and outside of the classroom and the incredible resiliency of youth.
+								<span class="ch-title">
+									Number One Is Empathy :
+								</span> 
+								<span class="info-text">
+									In this conversation with
+								</span> 
+								<span class="author-name">
+									Kursten Pickup
+								</span>
+								<span class="info-text">
+									, Baltimore City Community College Refugee Youth Project Coordinator, Kursten addresses the power of empathy in and outside of the classroom and the incredible resiliency of youth.
+								</span>
 							</p>
 						</li>
 						<li class="no-bottom ch7">
 							<a href="#">&nbsp;</a>
 
 							<p> 
-								<span class="ch-title">We Are Printing Our Freedom and It’s Happening Now :</span> Through months of digitally mediated and in-person conversations, <span class="author-name">Rahul Shinde</span> and <span class="author-name">Besan Khamis</span>, explore the power of automation, abstraction, poetry and humor as they relate to digital public space and Palestinian resistance.
+								<span class="ch-title">
+									Automation; [Application]; :
+								</span> 
+								<span class="info-text">
+									Through months of digitally mediated and in-person conversations, 
+								</span>
+								<span class="author-name">
+									Rahul Shinde
+								</span> 
+								and 
+								<span class="author-name">
+									Besan Khamis
+								</span>
+								<span class="info-text">
+									, explore the power of automation, abstraction, poetry and humor as they relate to digital public space and Palestinian resistance.
+								</span>
 							</p>
 						</li>
 						<li class="no-bottom ch8">
 							<a href="#">&nbsp;</a>
 
 							<p> 
-								<span class="ch-title"> Fight For Your Right To Dream :</span> In this conversation with <span class="author-name">Bryanna Jenkins</span>, activist and founder of the Baltimore Transgender Alliance, Bryanna reflects on the Baltimore Uprising and asserts that there is power in how you choose to engage (or not engage) others around you. 
+								<span class="ch-title"> 
+									Fight For Your Right To Dream :
+								</span> 
+								<span class="info-text">
+									In this conversation with
+								</span> 
+								<span class="author-name">
+									Bryanna Jenkins
+								</span>
+								<span class="info-text">
+									, activist and founder of the Baltimore Transgender Alliance, Bryanna reflects on the Baltimore Uprising and asserts that there is power in how you choose to engage (or not engage) others around you. 
+								</span>
 							</p>
 						</li>
 						<li class="no-bottom ch9">
 							<a href="#">&nbsp;</a>
 
 							<p> 
-								<span class="ch-title">The Real Artists of Get Your Life! Productions :</span> <span class="author-name">Get Your Life Productions</span> is a youth-run production company whose work revolves around imagining new ways of being in the world, unlocking potentiality and dismantling limitations. This chapter explores their on-going practice and collective members’ visions of their worlds. 
+								<span class="ch-title">
+									The Real Artists of Get Your Life! Productions :
+								</span> 
+								<span class="author-name">
+									Get Your Life Productions
+								</span> 
+								<span class="info-text">
+									is a youth-run production company whose work revolves around imagining new ways of being in the world, unlocking potentiality and dismantling limitations. This chapter explores their on-going practice and collective members’ visions of their worlds. 
+								</span>
 							</p>
 						</li>
 						<li class="no-bottom br ch10">
 							<a href="#">&nbsp;</a>
 
 							<p> 
-								<span class="ch-title">There’s No No! Only Yes!</span> In this conversation with Baltimore-native, visionary artist, <span class="author-name">Loring Cornish</span>, we talk about feeling freedom, love and positivity in the everyday and the role that art and artists can play in creating loving social spaces for democratic engagement.
+								<span class="ch-title">
+									There’s No No! Only Yes!
+								</span> 
+								<span class="info-text">
+									In this conversation with Baltimore-native, visionary artist,
+								</span> 
+								<span class="author-name">
+									Loring Cornish
+								</span>
+								<span class="info-text">
+									, we talk about feeling freedom, love and positivity in the everyday and the role that art and artists can play in creating loving social spaces for democratic engagement.
+								</span>
 							</p>
 						</li>
 
