--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 			<ul>
 				<li>
-					<a href="3.01.html">ver 3.01</a> Changes discussed from ver 2.01 applied, every project links to a (responsive) sample project page. 	
+					<a href="3.01.html">ver 3.01</a> Changes discussed from ver 2.01 applied, currently developing sample project page (will update w/ description once finished). 	
 				</li>
 				<br>
 				<li>
