adding in chapter 1 first draft

--- a/3.01.html
+++ b/3.01.html
@@ -34,20 +34,19 @@
 						click to close
 					</h3>
 					<h3> 
-						<span id="afterwards-title1">CALLING ALL IMAGINATIONS:
-						<br> a note from the editor </span>
+						<span id="afterwards-title1">CALLING ALL IMAGINATIONS:</span>
 						<br>
 						<br>
-						Last summer in Baltimore, just a few months following the Baltimore Uprising, I started reaching out to possible collaborators for a project that has now become If I Ruled The World. At that time, it felt like the most important thing for me to do was to be present with other people who cohabitate the city; to be as aware as possible of the people around me and the vastly different experiences of this city that we all have. I’m not sure that I was able to discreetly identify this at the time, just like I didn’t know exactly why I was starting this project, but somehow this collection of works and conversations came out of that attempt to be fully present. Starting at that moment, and over the past couple months in Baltimore, for me, to be fully present meant having conversations, or listening in on conversations, that investigate where freedom and joy exists in Baltimore and where freedom and joy could, but does not yet, exist in Baltimore. 
+						Last summer in Baltimore, just a few months following the Baltimore Uprising, I started reaching out to possible collaborators for a project that has now become If I Ruled The World. At that time, it felt like the most important thing I could do was to be present with other people who cohabitate the city, to be as aware as possible of the people around me and the vastly different experiences of this city that we all have. I’m not sure that I was able to discreetly identify this at the time; I didn’t know exactly why I was starting this project, but somehow this collection of works and conversations came out of an attempt to be fully present. Starting at that moment, and over the past couple months in Baltimore, for me, to be fully present has meant having conversations, or listening in on conversations, that investigate where freedom and joy exists in Baltimore and where freedom and joy could, but does not yet, exist in Baltimore.  
 						<br>
 						<br>
-						The prompt, taken from Nas’ song “If I Ruled The World” (It Was Written, 1996) featuring Lauryn Hill, is a contradiction itself; on one hand, it asserts that everyone has the right to take up space and envision the world as they want it, but on the other, it claims an old-school, hierarchical way of structuring life. However outdated this question might be, it prompted a series of collaborative, artistic responses and conversations by Baltimore-based creatives and activists, some of which, attempted to find a contemporary way of asking the question itself. Artistic collaborators who stepped into this project, did not only contribute content but also defined the direction of the entire project and identified new collaborators to pull in. Thus, this collection of unique voices, works and conversations grew organically over the past few months.
+						The prompt for this project, taken from Nas’ song “If I Ruled The World” (It Was Written, 1996) featuring Lauryn Hill, is a contradiction itself; on one hand, it asserts that everyone has the right to take up space and envision the world as they want it, but on the other, it claims an old-school, hierarchical way of structuring life. However outdated this question might be, it provoked a series of collaborative, artistic responses and conversations by Baltimore-based creatives and activists, who attempted to find a contemporary way of asking the question itself. Artistic collaborators who stepped into this project did not only contribute content but also defined the direction of the entire project and identified new collaborators to pull in. Thus, this collection of unique voices, works and conversations grew organically over the past few months.
 						<br>
 						<br>
-						The pieces in this work evolved to approach a range of issues; from the different forms that activism can take, to the role of artists in a struggle for equity, to normalized violence and all the way to strategic plans for the city. Most importantly, this project called on us to collaboratively imagine new, positive visions for our world and how we want to exist within it. 
+						When starting this project, my hope was that the prompt would inspire collaborators to imagine their most positive visions of the world, and through that positivity, would be able to thoughtfully and critically investigate the nuances within the struggle for social equity in our city. However, this collection of works evolved to approach art and activism much more broadly, touching on subjects such as health, education, language, public space and more. These themes that emerged in reaction to the on-going threads I set up, questions such as, What makes you feel free? What is special to you about Baltimore? What do you say 100% yes to? ground this investigation in the idea that activism can take many different forms, and is, at it’s root, something that is strongly tied to the ways we live our lives every single day. Instead of being a call for imagination, this project evolved to investigate and exemplify the concrete actions that can grow out of the audacity and the courage that it takes to imagine the world as you want it to be. 
 						<br>
 						<br>
-						We all have the power to imagine the world as we want it to be. This is a call for collaborative imagination. What if you ruled the world?
+						This is a call for more than imagination. <span class="bold">What if you ruled the world? </span>
 						<br>
 						<br>
 						<span id="afterwards-title2">
@@ -81,7 +80,7 @@
 			<div class="table-container">
 					<ul>
 						<li class="tl ch1">
-							<a href="#">&nbsp;</a>
+							<a href="ch1.html">&nbsp;</a>
 
 							<p> 
 								<span class="ch-title">
