closing thoughts (for now)

--- a/ch1.2.html
+++ b/ch1.2.html
@@ -18,7 +18,7 @@
 					<a class="link-back" href="3.01.html"></a>
 
 					<div class="outer">
-						<h1 class="inner1">Home</h1>
+						<h1 class="inner1">&#8593;<span class="link-space">_</span>Home</h1>
 					</div>
 					
 				</div>
@@ -33,7 +33,7 @@
 					<a class="link-forward" href="ch2.html"></a>
 
 					<div class="outer">
-						<h1 class="inner2">Cooperation<span class="link-space">_</span>is<span class="link-space">_</span>a<span class="link-space">_</span>Fact<span class="link-space">_</span>of<span class="link-space">_</span>Life</h1>
+						<h1 class="inner2">Cooperation<span class="link-space">_</span>is<span class="link-space">_</span>a<span class="link-space">_</span>Fact<span class="link-space">_</span>of<span class="link-space">_</span>Life<span class="link-space">_</span>&#8593;</h1>
 					</div>
 				</div>
 			</div>
