adding promo page to drafts website

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 			<ul>
 				<li>
+					<a href="http://rahulshinde.github.io/promo2/">Promo 2.01</a> Promo w/ schedule for PMF conference. Bringing in type system from first chapter 	
+				</li>
+
+				<li>
 					<a href="3.01.html">ver 3.01</a> Changes discussed from ver 2.01 applied, currently developing sample project page (will update w/ description once finished). 	
 				</li>
 				<br>
