--- a/4.01.html
+++ b/4.01.html
@@ -97,31 +97,31 @@
 							</p>
 						</li>
 						<li class="ch2">
-							<a href="#">&nbsp;</a>
 
 							<p> 
 								<span class="ch-title">
 									Cooperation is a Fact of Life :
 								</span> 
-								<span class="desc-text">In this conversation, artist, scholar and activist, 
+								<span class="desc-text">an interview with 
 								</span>
 								<span class="author-name">
 									Person Ablach
 								</span>
+								<br>
+								<br>
 								<span class="desc-text">
-									, discusses the absurdity of freedom as it relates to artistic practice and capitalism. These ideas lead us to discussing Person’s vision of more structured ways of being in the world which require working with others in your community as a standard practice.
+									Coming Soon
 								</span>
 
 							</p>
 						</li>
 						<li class="ch3">
-							<a href="#">&nbsp;</a>
 
 							<p> 
 								<span class="ch-title">
 									Lavender Blue Skies :
 								</span> 
-								<span class="desc-text">Through an active, collaborative investigation of holistic health, </span>
+								<span class="desc-text">by</span>
 								<span class="author-name">
 									Amy Reid 
 								</span> 
@@ -129,37 +129,45 @@
 								<span class="author-name">
 									Brayaria Simms (AKA Greydolf)
 								</span>
-								<span class="desc-text">, embarked on a series of activities together including meditation, swimming, walking, communal meals, collaborative work on creative projects and conversation. These practices resulted in a mutually supportive relationship of one another and the production of a manifesto which extends the authors’ learnings in order to help you become the best version of you!</span>
+								<br>
+								<br>
+								<span class="desc-text">
+									Coming Soon
+								</span>
 							</p>
 						</li>
 						<li class="ch4">
-							<a href="#">&nbsp;</a>
 
 							<p> 
 								<span class="ch-title">
 									Learning Yourself to Yourself :
 								</span> 
-								<span class="desc-text">In this conversation, Baltimore’s radical, improvisational queen, </span>
+								<span class="desc-text">an interview with</span>
 								<span class="author-name">
 									Bonnie Jones
 								</span>
-								<span class="desc-text">, applauds the extraordinary resilience of Baltimore while inviting us into her process of ‘learning how to be free’ through improvisational music, a medium that inherently breaks down traditional power structures. </span>
+								<br>
+								<br>
+								<span class="desc-text">Coming Soon</span>
 							</p>
 						</li>
 						<li class="tr ch5">
-							<a href="#">&nbsp;</a>
 
 							<p> 
 								<span class="ch-title">
 									Life Experiences: What Happens In Our World? :
 								</span> 
 								<span class="desc-text">
-									After a three-month intensive writing workshop centering on the theme If I Ruled The World, a group of 
+									by
 								</span>
 								<span class="author-name">
 									young writers and artists from Baltimore City Community College Refugee Youth Project
 								</span>
-								<span class="desc-text">, in partnership with the Press Press team, created a series of manifestos addressing their human rights and wrote powerful poetry about the hardships of exile and their hopes for their native home of Burma.</span>
+									<br>
+									<br>
+								<span class="desc-text">
+									Coming Soon
+								</span>
 							</p>
 						</li>
 
@@ -168,7 +176,6 @@
 
 					<ul>
 						<li class="no-bottom bl ch6">
-							<a href="#">&nbsp;</a>
 
 							<h2></h2>
 
@@ -177,25 +184,26 @@
 									Number One Is Empathy :
 								</span> 
 								<span class="desc-text">
-									In this conversation with
+									an interview with
 								</span> 
 								<span class="author-name">
 									Kursten Pickup
 								</span>
+								<br>
+								<br>
 								<span class="desc-text">
-									, Baltimore City Community College Refugee Youth Project Coordinator, Kursten addresses the power of empathy in and outside of the classroom and the incredible resiliency of youth.
+									Coming Soon
 								</span>
 							</p>
 						</li>
 						<li class="no-bottom ch7">
-							<a href="#">&nbsp;</a>
 
 							<p> 
 								<span class="ch-title">
 									Automation; [Application]; :
 								</span> 
 								<span class="desc-text">
-									Through months of digitally mediated and in-person conversations, 
+									by
 								</span>
 								<span class="author-name">
 									Rahul Shinde
@@ -204,59 +212,67 @@
 								<span class="author-name">
 									Besan Khamis
 								</span>
+								<br>
+								<br>
 								<span class="desc-text">
-									, explore the power of automation, abstraction, poetry and humor as they relate to digital public space and Palestinian resistance.
+									Coming Soon
 								</span>
 							</p>
 						</li>
 						<li class="no-bottom ch8">
-							<a href="#">&nbsp;</a>
 
 							<p> 
 								<span class="ch-title"> 
 									Fight For Your Right To Dream :
 								</span> 
 								<span class="desc-text">
-									In this conversation with
+									an interview with
 								</span> 
 								<span class="author-name">
 									Bryanna Jenkins
 								</span>
+								<br>
+								<br>
 								<span class="desc-text">
-									, activist and founder of the Baltimore Transgender Alliance, Bryanna reflects on the Baltimore Uprising and asserts that there is power in how you choose to engage (or not engage) others around you. 
+									Coming Soon
 								</span>
 							</p>
 						</li>
 						<li class="no-bottom ch9">
-							<a href="#">&nbsp;</a>
 
 							<p> 
 								<span class="ch-title">
 									The Real Artists of Get Your Life! Productions :
 								</span> 
+								<span class="desc-text">
+									by 
+								</span>
 								<span class="author-name">
 									Get Your Life Productions
 								</span> 
+								<br>
+								<br>
 								<span class="desc-text">
-									is a youth-run production company whose work revolves around imagining new ways of being in the world, unlocking potentiality and dismantling limitations. This chapter explores their on-going practice and collective members’ visions of their worlds. 
+									Coming Soon
 								</span>
 							</p>
 						</li>
 						<li class="no-bottom br ch10">
-							<a href="#">&nbsp;</a>
 
 							<p> 
 								<span class="ch-title">
-									There’s No No! Only Yes!
+									There’s No No! Only Yes! :
 								</span> 
 								<span class="desc-text">
-									In this conversation with Baltimore-native, visionary artist,
+									an interview with
 								</span> 
 								<span class="author-name">
 									Loring Cornish
 								</span>
+								<br>
+								<br>
 								<span class="desc-text">
-									, we talk about feeling freedom, love and positivity in the everyday and the role that art and artists can play in creating loving social spaces for democratic engagement.
+									Coming Soon
 								</span>
 							</p>
 						</li>
