finishing mobile version for 4.01 might add coming soon text

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 			<ul>
 				<li>
+					<a href="4.01.html">ver 4.01</a> Getting ready for saturday launch, all links that are not up yet have centered text, will create two other alternate versions for comparison. 	
+				</li>
+				<br>
+				<li>
 					<a href="http://rahulshinde.github.io/promo2/">Promo 2.01</a> Promo w/ schedule for PMF conference. Bringing in type system from first chapter 	
 				</li>
 				<br>
