--- a/4.01.html
+++ b/4.01.html
@@ -280,6 +280,10 @@
 
 					</ul>
 			</div>
+
+			<h1 class="coming-soon">
+				More chapters coming soon!
+			</h1>
 		</div>
 
 		 <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
