--- a/ch1.2.html
+++ b/ch1.2.html
@@ -7,7 +7,7 @@
 
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow|PT+Sans:400,700,400italic,700italic|PT+Mono|PT+Serif+Caption:400,400italic' rel='stylesheet' type='text/css'>
 
-		<link rel="stylesheet" type="text/css" href="css/3.01.css">
+		<link rel="stylesheet" type="text/css" href="css/4.01.css">
 		<link rel="stylesheet" type="text/css" href="css/ch1.2.css">
 	</head>
 
@@ -15,7 +15,7 @@
 		<div class="container">
 			<div class="navigation">
 				<div class="intro" id="fade">
-					<a class="link-back" href="3.01.html"></a>
+					<a class="link-back" href="4.01.html"></a>
 
 					<div class="outer">
 						<h1 class="inner1">&#8593;<span class="link-space">_</span>Home</h1>
@@ -30,10 +30,10 @@
 	
 				<div class="afterwards" id="fade">
 					
-					<a class="link-forward" href="ch2.html"></a>
+					<!-- <a class="link-forward" href="ch2.html"></a> -->
 
 					<div class="outer">
-						<h1 class="inner2">Cooperation<span class="link-space">_</span>is<span class="link-space">_</span>a<span class="link-space">_</span>Fact<span class="link-space">_</span>of<span class="link-space">_</span>Life<span class="link-space">_</span>&#8593;</h1>
+						<!-- <h1 class="inner2">Cooperation<span class="link-space">_</span>is<span class="link-space">_</span>a<span class="link-space">_</span>Fact<span class="link-space">_</span>of<span class="link-space">_</span>Life<span class="link-space">_</span>&#8593;</h1> -->
 					</div>
 				</div>
 			</div>
