--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 			<ul>
 				<li>
+					<a href="4.02.html">ver 4.02</a> Same as below, only minor change is that chapters text is aligned to the top instead of middle. 	
+				</li>
+				<br>
+				<li>
 					<a href="4.01.html">ver 4.01</a> Getting ready for saturday launch, all links that are not up yet have centered text, will create two other alternate versions for comparison. 	
 				</li>
 				<br>
