adding bio tag for easy styling

--- a/ch1.2.html
+++ b/ch1.2.html
@@ -216,11 +216,11 @@
 			</div>
 
 			<div class="content-container no-border">
-				<p>
+				<p id="bio">
 					KHADIJA NIA ADELL - Born and raised in Miami, FL, transplanted to Baltimore in 2011, Khadija Nia Adell is a young multi-media artist, curator, writer and scholar invested in social activism and entrepreneurship. Through the many mediums of the arts, her combined written and visual arts practice aims to provoke our human consciousness through discussion, contemplation and action. Through the layering of contextual memory, African Diasporic history and manifold visual expression, her works acts as a response to the intricate relationships entangled in the geometry of the colonial and precolonial histories of now. 
 				</p>
 
-				<p>
+				<p id="bio">
 					JARED BROWN - Jared Brown was raised in Chicago, Illinois. In May of 2014, he received his BFA for Video and Film Arts from the Maryland Institute College of Art. Through text, sampling, video, photography, installation, performance and sound, he re-purposes fragmented data to construct mythology about his origins and existence while creating archival content to serve as proof of existence. Dj sets, social media, short videos and guerilla style performances are all vehicles he uses to navigate the extremities of existing as a black celestial being in a post-apocalyptic Western civilization. Jared Brown currently lives and makes work in Chicago.
 				</p>
 			</div>
