--- a/ch1.2.html
+++ b/ch1.2.html
@@ -5,6 +5,8 @@
 	<head>
 		<title>Chapter1.2</title>
 
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow|PT+Sans:400,700,400italic,700italic|PT+Mono|PT+Serif+Caption:400,400italic' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" type="text/css" href="css/4.01.css">
