--- a/intro.html
+++ b/intro.html
@@ -5,7 +5,8 @@
 	<head>
 		<title>Intro</title>
 
-		<link rel="stylesheet" type="text/css" href="css/2.01.css">
+		<link rel="stylesheet" type="text/css" href="css/4.01.css">
+		<link rel="stylesheet" type="text/css" href="css/ch1.2.css">
 
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow|PT+Sans:400,700,400italic,700italic|PT+Mono|PT+Serif+Caption:400,400italic' rel='stylesheet' type='text/css'>
 	</head>
@@ -14,10 +15,10 @@
 		<div class="container">
 			<div class="navigation">
 				<div class="intro" id="fade">
-					<a class="external-link1" href="2.01.html"></a>
+					<a class="link-back" href="index.html"></a>
 
 					<div class="outer">
-						<h1 class="inner1">Home</h1>
+						<h1 class="inner1">&#8593;<span class="link-space">_</span>Home</h1>
 					</div>
 					
 				</div>
@@ -28,24 +29,40 @@
 				</div>
 	
 				<div class="afterwards" id="fade">
-					
-					<a class="external-link2" href="afterwards.html"></a>
 
 					<div class="outer">
-						<h1 class="inner2">Afterwards</h1>
 					</div>
 				</div>
 			</div>
 
-			<div class="table-container">
-					<h3> Lacus vulputate. Mi magna. Elit quisque tempus dignissim id sapien et tellus scelerisque Augue Duis orci. Sociis ut molestie torquent netus magnis adipiscing sociosqu cum metus ad rutrum consectetuer placerat nisl sociosqu dictum. Diam sed malesuada cubilia. Erat elit adipiscing ad a litora ipsum varius et lorem ornare laoreet justo sodales metus. Venenatis netus faucibus nisl per justo integer. Velit lobortis lobortis dictumst tempus cursus sed hac tristique lobortis vestibulum purus tortor sollicitudin mauris Aptent consequat fames nec ultrices, accumsan elementum erat sociosqu. Ipsum dis. Tristique arcu aliquet blandit feugiat. Ultrices. Facilisis turpis taciti tincidunt fames imperdiet lectus sociis, lorem lobortis. Aliquam fames habitant habitant aptent massa. Dis potenti tempus vehicula elit morbi varius vel sollicitudin. Condimentum convallis metus. Suspendisse leo blandit dis egestas et tortor tellus nisl sociis mauris accumsan mus, penatibus eleifend eget posuere hymenaeos nibh. Non mauris feugiat aenean mi duis pretium maecenas nunc dignissim ridiculus mattis. Ullamcorper elementum parturient. Ad vitae per congue, eleifend fermentum porttitor. Duis sapien fusce.
-					<br>
-					<br>
-					Quis adipiscing potenti, condimentum. Sociosqu netus habitant rhoncus. Aenean orci cras luctus Etiam placerat praesent maecenas. Velit cum phasellus. Hendrerit. Vestibulum dignissim condimentum fermentum ullamcorper aenean faucibus vel conubia curabitur iaculis dignissim. Ac mattis senectus. Luctus dignissim conubia ante dapibus nonummy purus sem sollicitudin rhoncus nascetur integer ut quisque eleifend, dictumst sem nonummy metus praesent vitae hymenaeos pretium faucibus fames rhoncus. Purus fames aliquet eget nullam habitant laoreet nisl ornare nulla auctor, a nec morbi cursus feugiat justo. Ut lacinia sociis dignissim, penatibus aliquet in primis neque dignissim risus curabitur potenti vitae ultricies semper placerat purus sem metus quam ultricies conubia aliquam elementum Justo scelerisque iaculis hac quam suscipit auctor augue magna. Pharetra placerat, tempus dignissim augue. Convallis facilisi massa aenean cum amet convallis nam leo leo augue habitant scelerisque ipsum inceptos urna tempor vestibulum at dolor donec augue. Justo pellentesque rhoncus. Facilisis. Proin hymenaeos Dignissim elit viverra vivamus. Nascetur, vel cum hymenaeos vivamus tempus et vehicula. Facilisi at vestibulum mus ac. Quam augue euismod rhoncus nisl nec. Ut. Iaculis elementum montes ac. Lacinia rutrum leo viverra vitae. Libero semper orci dictumst ad convallis lectus, vitae accumsan aenean fermentum, leo elit cursus habitasse nullam a. Hendrerit quam dictum amet a sodales amet aliquam consectetuer eu Fusce class inceptos. Ante. Diam magna. Fermentum hymenaeos amet sagittis adipiscing quisque nonummy, ut mus vivamus.
-					<br>
-					<br>
-					Orci pretium mauris quisque phasellus imperdiet habitant rutrum lacus ridiculus lobortis. Rhoncus cubilia hac habitasse gravida Dolor suscipit viverra hymenaeos nascetur nullam odio. Sollicitudin phasellus quam mi sagittis nisi maecenas purus netus. Nisi sem dapibus platea parturient malesuada sit pulvinar purus felis penatibus porta, euismod litora malesuada tempor. Dapibus arcu suscipit nisl est nunc parturient phasellus interdum erat ullamcorper. Nunc felis rutrum facilisi lacinia dictumst at congue. Magna per leo integer nonummy nam aliquam suspendisse. Ultricies rutrum ligula mollis sociis vehicula curae; tortor. Mus purus. Ornare. Pede id rutrum netus iaculis imperdiet faucibus primis curae; sem. At nec luctus primis mollis. Nunc. At lorem. Fames tristique odio sem habitant neque ornare at. Mattis primis viverra. Sociosqu ad. Feugiat. Tincidunt habitasse. Phasellus bibendum quisque sodales neque dolor tortor et leo hymenaeos ac placerat augue. Faucibus potenti turpis hac morbi sed class nunc natoque sociis sed ante, lectus porta risus habitasse elementum, cursus viverra aenean lorem ut netus taciti laoreet sem quis eleifend sollicitudin. Bibendum tristique pharetra litora risus. Facilisis vivamus Eget tempor suscipit inceptos sagittis litora penatibus eleifend, libero vulputate sociosqu, quis quam eget purus congue, placerat, justo erat elit luctus. Iaculis semper posuere, nullam suscipit cubilia. Amet est erat eros varius feugiat tempor inceptos ad habitant odio bibendum habitant urna at. Elementum eros. Facilisi. Risus tempus suspendisse, conubia. Quis tempus lacinia, donec mauris aptent. Vel. Ante sodales pharetra ut interdum hymenaeos quis elit cras nullam lacinia, fames in suspendisse integer leo nec justo ligula. Lectus ac Elementum ullamcorper ac orci potenti nunc ut justo pharetra posuere per elit dictum et. Purus odio lacus a nascetur vehicula quam pellentesque tristique consequat. Nec imperdiet habitasse scelerisque, quam elit felis eu lobortis. Urna turpis a nulla est. Ac pellentesque potenti litora. Natoque cras dictumst leo metus, laoreet facilisis habitant dis molestie pretium dolor etiam. Gravida amet donec Cras volutpat pharetra dis nulla potenti felis. Duis vivamus quam torquent nisi.</h3>
+			<div class="title-container no-border">
+				<h1 class="ch-heading">
+					CALLING ALL IMAGINATIONS: 
+				</h1>
+			</div>
 
+			<div class="content-container no-border">
+				<h3 class="ch-manifest" id="no-bottom">
+					Last summer in Baltimore, just a few months following the Baltimore Uprising, I started reaching out to possible collaborators for a project that has now become If I Ruled The World. At that time, it felt like the most important thing I could do was to be present with other people who cohabitate the city, to be as aware as possible of the people around me and the vastly different experiences of this city that we all have. I’m not sure that I was able to discreetly identify this at the time; I didn’t know exactly why I was starting this project, but somehow this collection of works and conversations came out of an attempt to be fully present. Starting at that moment, and over the past couple months in Baltimore, for me, to be fully present has meant having conversations, or listening in on conversations, that investigate where freedom and joy exists in Baltimore and where freedom and joy could, but does not yet, exist in Baltimore.  
+					<br>
+					<br>
+					The prompt for this project, taken from Nas’ song “If I Ruled The World” (It Was Written, 1996) featuring Lauryn Hill, is a contradiction itself; on one hand, it asserts that everyone has the right to take up space and envision the world as they want it, but on the other, it claims an old-school, hierarchical way of structuring life. However outdated this question might be, it provoked a series of collaborative, artistic responses and conversations by Baltimore-based creatives and activists, who attempted to find a contemporary way of asking the question itself. Artistic collaborators who stepped into this project did not only contribute content but also defined the direction of the entire project and identified new collaborators to pull in. Thus, this collection of unique voices, works and conversations grew organically over the past few months.
+					<br>
+					<br>
+					When starting this project, my hope was that the prompt would inspire collaborators to imagine their most positive visions of the world, and through that positivity, would be able to thoughtfully and critically investigate the nuances within the struggle for social equity in our city. However, this collection of works evolved to approach art and activism much more broadly, touching on subjects such as health, education, language, public space and more. These themes that emerged in reaction to the on-going threads I set up, questions such as, What makes you feel free? What is special to you about Baltimore? What do you say 100% yes to? ground this investigation in the idea that activism can take many different forms, and is, at it’s root, something that is strongly tied to the ways we live our lives every single day. Instead of being a call for imagination, this project evolved to investigate and exemplify the concrete actions that can grow out of the audacity and the courage that it takes to imagine the world as you want it to be. 
+					<br>
+					<br>
+					This is a call for more than imagination. <span class="bold">What if you ruled the world? </span>
+					<br>
+					<br>
+					<span id="afterwards-title2">
+						Kimi Hanauer
+						<br>
+						Press Press
+					</span>
+					<br>
+					<br>
+				</h3>
 			</div>
 		</div>
 		
