finishing mobile img links

--- a/ch1.2.html
+++ b/ch1.2.html
@@ -76,7 +76,8 @@
 
 			<div class="content-container no-border">
 
-				<img class="img-half" id="img1" src="img/ch1/firstani.gif">
+				<img class="img-half web" id="img1" src="img/ch1/full/1.gif">
+				<img class="img-half mobile" id="img1" src="img/ch1/mobile/1.gif">
 
 				<h3 class="ch-pull">
 					<span class="bold">Maybe being taken under by life is like a way of being domesticated by life itself and its conditions? </span>  
@@ -104,7 +105,8 @@
 
 			<div class="content-container no-border">
 
-				<img class="img-half" src="img/ch1/fourthani.gif">
+				<img class="img-half web" src="img/ch1/full/2.gif">
+				<img class="img-half mobile" src="img/ch1/mobile/2.gif">
 
 				<h3 class="ch-pull" id="pull2">
 					<span class="bold">Ruling anything is about taking full control and responsibility over the <span class="italic">nowness!</span> </span>  
@@ -161,7 +163,8 @@
 
 			<div class="content-container no-border">
 
-				<img class="img-half" src="img/ch1/thirdani.gif">
+				<img class="img-half web" src="img/ch1/full/3.gif">
+				<img class="img-half mobile" src="img/ch1/mobile/3.gif">
 				
 				<h3 class="ch-pull" id="pull3">
 					<span class="bold">Why is it that socialism is just a distracting conversation until the girls figure out how to get that Capital Coin?</span>  
