adding meta tag to intro

--- a/intro.html
+++ b/intro.html
@@ -5,6 +5,8 @@
 	<head>
 		<title>Intro</title>
 
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 		<link rel="stylesheet" type="text/css" href="css/4.01.css">
 		<link rel="stylesheet" type="text/css" href="css/ch1.2.css">
 
