starting on ch2

--- a/ch2.html
+++ b/ch2.html
@@ -42,11 +42,11 @@
 
 			<div class="title-container no-border">
 				<h1 class="ch-heading">
-					YOU COME FROM THE STARS, BLACK PEOPLE. MOVE AROUND. DO WHAT YOU NEED TO DO. LITERALLY FLOAT OUT HERE. 
+					COOPERATION IS A FACT OF LIFE 
 				</h1>
 
 				<h2 class="ch-authors">
-					Jared Brown + Khadija Nia Adell 
+					A Conversation with Person Ablach 
 				</h2>
 			</div>
 
