adding in new chapter(s)

--- a/ch1.2.html
+++ b/ch1.2.html
@@ -3,9 +3,28 @@
 <html>
 
 	<head>
-		<title>Chapter1.2</title>
+		<title>You Come from the Stars</title>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-touch-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-touch-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-touch-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-touch-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="favicons/apple-touch-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="favicons/apple-touch-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="favicons/apple-touch-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-touch-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon-180x180.png">
+		<link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="favicons/android-chrome-192x192.png" sizes="192x192">
+		<link rel="icon" type="image/png" href="favicons/favicon-96x96.png" sizes="96x96">
+		<link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
+		<link rel="manifest" href="favicons/manifest.json">
+		<link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#0000ff">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-TileImage" content="favicons/mstile-144x144.png">
+		<meta name="theme-color" content="#ffffff">
 
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow|PT+Sans:400,700,400italic,700italic|PT+Mono|PT+Serif+Caption:400,400italic' rel='stylesheet' type='text/css'>
 
@@ -17,7 +36,7 @@
 		<div class="container">
 			<div class="navigation">
 				<div class="intro" id="fade">
-					<a class="link-back" href="4.01.html"></a>
+					<a class="link-back" href="index.html"></a>
 
 					<div class="outer">
 						<h1 class="inner1">&#8593;<span class="link-space">_</span>Home</h1>
@@ -27,15 +46,15 @@
 
 
 				<div class="title" id="fade">
-					<h1><span class="italic">If I Ruled the World</span> presented by PRESS PRESS</h1>
+					<h1>If I Ruled the World</span> presented by <a href="http://presspress.info/" target="_blank"><span class="italic">PRESS PRESS</a></h1>
 				</div>
 	
 				<div class="afterwards" id="fade">
 					
-					<!-- <a class="link-forward" href="ch2.html"></a> -->
+					<a class="link-forward" href="ch2.html"></a>
 
 					<div class="outer">
-						<!-- <h1 class="inner2">Cooperation<span class="link-space">_</span>is<span class="link-space">_</span>a<span class="link-space">_</span>Fact<span class="link-space">_</span>of<span class="link-space">_</span>Life<span class="link-space">_</span>&#8593;</h1> -->
+						<h1 class="inner2">Cooperation<span class="link-space">_</span>is<span class="link-space">_</span>a<span class="link-space">_</span>Fact<span class="link-space">_</span>of<span class="link-space">_</span>Life<span class="link-space">_</span>&#8593;</h1>
 					</div>
 				</div>
 			</div>
@@ -77,6 +96,7 @@
 			<div class="content-container no-border">
 
 				<img class="img-half web" id="img1" src="img/ch1/full/1.gif">
+				<img class="img-half middle" id="img1" src="img/ch1/mobile/1.gif">
 				<img class="img-half mobile" id="img1" src="img/ch1/mobile/1.gif">
 
 				<h3 class="ch-pull">
@@ -106,6 +126,7 @@
 			<div class="content-container no-border">
 
 				<img class="img-half web" src="img/ch1/full/2.gif">
+				<img class="img-half middle" src="img/ch1/mobile/2.gif">
 				<img class="img-half mobile" src="img/ch1/mobile/2.gif">
 
 				<h3 class="ch-pull" id="pull2">
@@ -164,6 +185,7 @@
 			<div class="content-container no-border">
 
 				<img class="img-half web" src="img/ch1/full/3.gif">
+				<img class="img-half middle" src="img/ch1/mobile/3.gif">
 				<img class="img-half mobile" src="img/ch1/mobile/3.gif">
 				
 				<h3 class="ch-pull" id="pull3">
