--- a/ch2.html
+++ b/ch2.html
@@ -7,6 +7,25 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+		<link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-touch-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-touch-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-touch-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-touch-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="favicons/apple-touch-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="favicons/apple-touch-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="favicons/apple-touch-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-touch-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon-180x180.png">
+		<link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="favicons/android-chrome-192x192.png" sizes="192x192">
+		<link rel="icon" type="image/png" href="favicons/favicon-96x96.png" sizes="96x96">
+		<link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
+		<link rel="manifest" href="favicons/manifest.json">
+		<link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#0000ff">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-TileImage" content="favicons/mstile-144x144.png">
+		<meta name="theme-color" content="#ffffff">
+
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow|PT+Sans:400,700,400italic,700italic|PT+Mono|PT+Serif+Caption:400,400italic' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" type="text/css" href="css/4.01.css">
@@ -17,7 +36,7 @@
 		<div class="container">
 			<div class="navigation">
 				<div class="intro" id="fade">
-					<a class="link-back" href="4.01.html"></a>
+					<a class="link-back" href="index.html"></a>
 
 					<div class="outer">
 						<h1 class="inner1">&#8593;<span class="link-space">_</span>Home</h1>
@@ -30,7 +49,7 @@
 					<h1><span class="italic">If I Ruled the World</span> presented by PRESS PRESS</h1>
 				</div>
 	
-				<div class="afterwards" id="fade">
+				<div class="afterwards no-shadow" id="fade">
 					
 					<!-- <a class="link-forward" href="ch2.html"></a> -->
 
@@ -51,7 +70,9 @@
 			</div>
 
 			<div class="content-container no-border">
-				<img src="img/ch2/d.png">
+				<img class="full-image web" src="img/ch2/d.png">
+				<img class="full-image middle" src="img/ch2/d-middle.png">
+				<img class="full-image mobile" src="img/ch2/d-mobile.png">
 			</div>
 
 			<div class="content-container no-border">
